syntax = "proto3";

package book;

service BookService {
    rpc getBooks (getBooksRequest) returns (getBooksResponse) {}
    rpc getBookById (getBookByIdRequest) returns (getBookByIdResponse) {}
}

// getBooks
message getBooksRequest{

}
message getBooksResponse {
    repeated Book books = 1;
}

message Book {
    int32 id =1;
    string title = 2;
    string description = 3;
    string author = 4;   
}

// getBookById

message getBookByIdRequest {
    int32 id = 1;
}

message getBookByIdResponse {
    Book book =1;
}